# zest

./: CMakeLists.txt  README.md  possible_names.txt
src/: main.cpp  raylib_wrapper.hpp  text.hpp  tree_sitter.cpp  tree_sitter.hpp  types.hpp
src/highlight/: captures.hpp  queries.hpp
src/zest/: app.cpp  app.hpp  main.cpp  raylib_wrapper.hpp  tree_sitter.cpp  tree_sitter.hpp  types.hpp
src/zest/highlight/: captures.hpp
src/zest/x11/: main.cpp  xlib.cpp
